# bom-bom-bom

./: .gitignore  README.md  flake.nix  pyproject.toml
bom-bom-bom/: kicad_bom.py  main.py
bombombom/: collapse.py  def_parser.py  filter.py  grouping.py  kicad_bom.py  main.py  partdb.py  tabulate.py  utils.py
