[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bom-bom-bom"
version = "0.1"
description = "Generate KiCAD BOM's from the command line, augmenting them with PartDB data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "typer",
  "sexpdata",
  "strictyaml",
  "jinja2",
  "requests",
]

[tool.hatch.build.targets.wheel]
packages = ["bombombom"]

[project.scripts]
bom-bom-bom = "bombombom.main:main"
